# doomdooz

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  cops_under_development.txt
.github/workflows/: rust.yml
doomdooz/: Cargo.toml  build.rs
doomdooz-lib/: Cargo.toml  build.rs
doomdooz-lib/src/: config.rs  cop.rs  lib.rs  source.rs  target_finder.rs  testing.rs  types.rs
doomdooz-lib/src/cop/: bundler.rs  layout.rs  layout.template  lint.rs  naming.rs  style.rs
doomdooz-lib/src/cop/bundler/: duplicated_gem.rs
doomdooz-lib/src/cop/layout/: leading_comment_space.rs  leading_empty_lines.rs  space_after_colon.rs  space_after_comma.rs  space_after_method_name.rs  space_after_not.rs  space_after_semicolon.rs  space_before_comma.rs  space_before_comment.rs  space_before_semicolon.rs
doomdooz-lib/src/cop/lint/: duplicate_hash_key.rs  empty_interpolation.rs  float_out_of_range.rs  regexp_as_condition.rs
doomdooz-lib/src/cop/naming/: accessor_method_name.rs  ascii_identifiers.rs  binary_operator_parameter_name.rs
doomdooz-lib/src/cop/style/: alias.rs  and_or.rs  array_join.rs  begin_block.rs  colon_method_definition.rs  empty_method.rs  end_block.rs  send.rs  strip.rs  symbol_literal.rs
doomdooz-wasm/: Cargo.toml
doomdooz-wasm/src/: lib.rs
doomdooz/src/: main.rs
src/: config.rs  cop.rs  main.rs  reporting.rs  source.rs  target_finder.rs  testing.rs  types.rs
src/cop/: bundler.rs  default.rs  lint.rs  mod.rs  naming.rs
src/cop/bundler/: duplicated_gem.rs
src/cop/lint/: duplicate_hash_key.rs
src/cop/naming/: accessor_method_name.rs  ascii_identifiers.rs  binary_operator_parameter_name.rs  mod.rs
src/cop/style/: empty_method.rs
