[package]
name = "doomdooz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ruby-parser="3.0.0"
regex = "1"
lazy_static = "1.4.0"
yaml-rust = "0.4.5"
merge-yaml-hash = "0.2.0"
globwalk = "0.8.1"
rayon = "1.6.1"
