[package]
name = "doomdooz-lib"
description = "Ruby linter library implementing all rubocop features"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]

[dependencies]
lib-ruby-parser="3.0.0"
regex = "1"
lazy_static = "1.4.0"
yaml-rust = "0.4.5"
merge-yaml-hash = "0.2.0"
globwalk = "0.8.1"

[profile.release]
opt-level = 'z'
lto = true
strip = true
