[package]
description = "Ruby linter library implementing all rubocop features"
edition = "2021"
license = "MIT"
name = "doomdooz-lib"
version = "0.1.0"

[lib]

[dependencies]
globwalk = "0.8.1"
indoc = "1.0.8"
lazy_static = "1.4.0"
lib-ruby-parser = "4"
merge-yaml-hash = "0.2.0"
regex = "1"
yaml-rust = "0.4.5"

[build-dependencies]
globwalk = "0.8.1"
tera = "1"

[profile.release]
lto = true
opt-level = 'z'
strip = true
