[package]
name = "doomdooz"
description = "Ruby linter executable implementing all rubocop features"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
doomdooz-lib = { version= "0.1.0", path = "../doomdooz-lib" }
rayon = "1.6.1"
